RESOLVED FIXED126353
[Gtk] WebKitWebInspector has build warnings due to uninitialized didChangeAttachedWidth member
https://bugs.webkit.org/show_bug.cgi?id=126353
Summary [Gtk] WebKitWebInspector has build warnings due to uninitialized didChangeAtt...
Brendan Long
Reported 2013-12-31 15:03:07 PST
[Gtk] WebKitWebInspector has build warnings due to uninitialized didChangeAttachedWidth member
Attachments
Patch (1.50 KB, patch)
2013-12-31 15:06 PST, Brendan Long
no flags
Brendan Long
Comment 1 2013-12-31 15:06:32 PST
WebKit Commit Bot
Comment 2 2013-12-31 15:09:15 PST
Thanks for the patch. If this patch contains new public API please make sure it follows the guidelines for new WebKit2 GTK+ API. See http://trac.webkit.org/wiki/WebKitGTK/AddingNewWebKit2API
Brendan Long
Comment 3 2013-12-31 15:11:18 PST
This is part of my personal quest to destroy all build warnings. With changes like this, should I be landing them myself now? Build output: CXX Source/JavaScriptCore/disassembler/libjavascriptcoregtk_3_0_la-ARM64Disassembler.lo In file included from ../../Source/JavaScriptCore/disassembler/ARM64/A64DOpcode.cpp:27:0: ../../Source/JavaScriptCore/disassembler/ARM64/A64DOpcode.h: In member function 'void JSC::ARM64Disassembler::A64DOpcode::appendUnsignedImmediate64(uint64_t)': ../../Source/JavaScriptCore/disassembler/ARM64/A64DOpcode.h:175:42: error: format '%llx' expects argument of type 'long long unsigned int', but argument 3 has type 'uint64_t {aka long unsigned int}' [-Werror=format=] bufferPrintf("#0x%llx", immediate); ^ ../../Source/JavaScriptCore/disassembler/ARM64/A64DOpcode.h: In member function 'void JSC::ARM64Disassembler::A64DOpcode::appendPCRelativeOffset(uint32_t*, int32_t)': ../../Source/JavaScriptCore/disassembler/ARM64/A64DOpcode.h:180:74: error: format '%llx' expects argument of type 'long long unsigned int', but argument 3 has type 'uint64_t {aka long unsigned int}' [-Werror=format=] bufferPrintf("0x%llx", reinterpret_cast<uint64_t>(pc + immediate));
Brendan Long
Comment 4 2013-12-31 15:12:25 PST
Er wrong build output. This is what it fixes: ../../Source/WebKit2/UIProcess/API/gtk/WebKitWebInspector.cpp: In function 'WebKitWebInspector* webkitWebInspectorCreate(WebKit::WebInspectorProxy*)': ../../Source/WebKit2/UIProcess/API/gtk/WebKitWebInspector.cpp:331:5: error: missing initializer for member 'WKInspectorClientGtkV0::didChangeAttachedWidth' [-Werror=missing-field-initializers] };
WebKit Commit Bot
Comment 5 2013-12-31 17:04:32 PST
Comment on attachment 220172 [details] Patch Clearing flags on attachment: 220172 Committed r161186: <http://trac.webkit.org/changeset/161186>
WebKit Commit Bot
Comment 6 2013-12-31 17:04:35 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.