[Gtk] WebKitWebInspector has build warnings due to uninitialized didChangeAttachedWidth member https://bugs.webkit.org/show_bug.cgi?id=126353

Reviewed by Martin Robinson.

* UIProcess/API/gtk/WebKitWebInspector.cpp:
(webkitWebInspectorCreate): Initialize didChangeAttachedWidth to null.


Canonical link: https://commits.webkit.org/144266@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@161186 268f45cc-cd09-0410-ab3c-d52691b4dbfc