Source/WebKit2/UIProcess/API/gtk/WebKitWebInspector.cpp
@@ -327,7 +327,8 @@ WebKitWebInspector* webkitWebInspectorCreate(WebInspectorProxy* webInspector)
         inspectedURLChanged,
         attach,
         detach,
-        didChangeAttachedHeight
+        didChangeAttachedHeight,
+        nullptr // didChangeAttachedWidth
     };
     WKInspectorSetInspectorClientGtk(toAPI(webInspector), &wkInspectorClientGtk.base);
 
